--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "tsc -w"
   },
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "keytar": "^5.4.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
