--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
   "name": "devops-buddy",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.1.0",
   "license": "MIT",
+  "main": "dist/cli.js",
+  "bin": {
+    "devops-buddy": "dist/cli.js"
+  },
   "scripts": {
+    "build": "tsc",
     "start": "tsc -w"
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "electron": "^8.2.0",
+    "ini": "^1.3.5",
+    "jsonwebtoken": "^8.5.1",
     "keytar": "^5.4.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/ini": "^1.3.30",
+    "@types/jsonwebtoken": "^8.3.8",
+    "@types/keytar": "^4.4.2",
     "tsc-watch": "^4.2.3",
-    "typescript": "^3.8.3",
-    "electron": "^8.2.0"
+    "typescript": "^3.8.3"
   }
 }
