--- a/packages/ado-pat/package.json
+++ b/packages/ado-pat/package.json
@@ -9,9 +9,10 @@
     "bundle": "webpack --mode=production"
   },
   "dependencies": {
-    "@azure/msal-node-extensions": "^1.0.16",
     "@azure/msal-node": "^2.7.0",
-    "keytar": "^7.8.0"
+    "@azure/msal-node-extensions": "^1.0.16",
+    "keytar": "^7.8.0",
+    "open": "^10.1.0"
   },
   "bin": "bin/ado-pat",
   "devDependencies": {
@@ -32,6 +33,13 @@
     "dist/**",
     "lib/**"
   ],
+  "exports": {
+    ".": {
+      "source": "./src/index.ts",
+      "import": "./lib/index.js",
+      "require": "./lib/index.js"
+    }
+  },
   "repository": {
     "url": "https://github.com/kenotron/ado-pat"
   }
