--- a/packages/ado-yarn-auth/package.json
+++ b/packages/ado-yarn-auth/package.json
@@ -7,11 +7,29 @@
     "bundle:dist": "webpack --mode production"
   },
   "dependencies": {
-    "ado-pat": "^1.0.8"
+    "@azure/msal-node": "^2.7.0",
+    "@azure/msal-node-extensions": "^1.0.16",
+    "ado-pat": "workspace:*",
+    "keytar": "^7.8.0"
+  },
+  "exports": {
+    ".": {
+      "source": "./src/index.ts",
+      "import": "./lib/index.js",
+      "require": "./lib/index.js"
+    }
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
+    "@types/lodash-es": "^4.17.12",
+    "@yarnpkg/cli": "^4.2.2",
+    "@yarnpkg/core": "^4.0.5",
+    "@yarnpkg/plugin-nm": "^4.0.2",
+    "@yarnpkg/plugin-npm": "^3.0.1",
+    "@yarnpkg/plugin-pack": "^4.0.0",
     "commander": "^12.0.0",
     "js-yaml": "^4.1.0",
+    "lodash-es": "^4.17.21",
     "node-fetch": "^3.3.2",
     "pino": "^9.0.0",
     "pino-pretty": "^11.0.0",
