--- a/packages/ado-npm-connect/package.json
+++ b/packages/ado-npm-connect/package.json
@@ -20,9 +20,11 @@
     }
   },
   "devDependencies": {
+    "@types/ini": "^4.1.0",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash-es": "^4.17.12",
     "commander": "^12.0.0",
+    "ini": "^4.1.3",
     "js-yaml": "^4.1.0",
     "lodash-es": "^4.17.21",
     "node-fetch": "^3.3.2",
