--- a/packages/ado-pat/package.json
+++ b/packages/ado-pat/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@azure/msal-node": "^2.7.0",
-    "@azure/msal-node-extensions": "^1.0.16",
-    "keytar": "^7.8.0",
+    "@napi-rs/keyring": "^1.1.6",
+    "node-dpapi2": "^1.0.5",
     "open": "^10.1.0"
   },
   "bin": "bin/ado-pat",
