--- a/packages/ado-npm-connect/package.json
+++ b/packages/ado-npm-connect/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "ado-yarn-auth",
+  "name": "ado-npm-connect",
   "version": "1.0.0",
-  "description": "Authenticates yarn berry to Azure DevOps",
+  "description": "Helps npm and yarn to connect to Azure DevOps Artifacts",
   "scripts": {
     "dev": "webpack --watch --mode development",
     "bundle:dist": "webpack --mode production"
   },
   "dependencies": {
     "@azure/msal-node": "^2.7.0",
-    "@azure/msal-node-extensions": "^1.0.16",
     "ado-pat": "workspace:*",
-    "keytar": "^7.8.0"
+    "@napi-rs/keyring": "^1.1.6",
+    "node-dpapi2": "^1.0.5",
+    "open": "^10.1.0"
   },
   "exports": {
     ".": {
