changes to prebuilt things

--- a/packages/ado-npm-connect/package.json
+++ b/packages/ado-npm-connect/package.json
@@ -10,7 +10,7 @@
     "@azure/msal-node": "^2.7.0",
     "@napi-rs/keyring": "^1.1.6",
     "ado-pat": "workspace:*",
-    "node-dpapi2": "^1.0.5",
+    "@primno/dpapi": "^1.1.2",
     "open": "^10.1.0"
   },
   "exports": {
