hides the dependency behind platform check

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -28,4 +28,4 @@ jobs:
         run: yarn checkchange
 
       - name: Build
-        run: yarn lage build --concurrency 2 --verbose
+        run: yarn lage build bundle --concurrency 2 --verbose
