--- a/packages/ado-pat/package.json
+++ b/packages/ado-pat/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@azure/msal-node": "^2.7.0",
     "@napi-rs/keyring": "^1.1.6",
-    "@primno/dpapi": "^1.1.2",
     "open": "^10.1.0"
+  },
+  "optionalDependencies": {
+    "@primno/dpapi": "^1.1.2"
   },
   "bin": "bin/ado-pat",
   "devDependencies": {
