--- a/packages/ado-npm-connect/package.json
+++ b/packages/ado-npm-connect/package.json
@@ -9,8 +9,7 @@
   "dependencies": {
     "@azure/msal-node": "^2.7.0",
     "@azure/msal-node-extensions": "^1.0.16",
-    "ado-pat": "workspace:*",
-    "keytar": "^7.8.0"
+    "ado-pat": "workspace:*"
   },
   "exports": {
     ".": {
