--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "scripts": {
     "build": "lage build",
     "start": "lage start",
-    "bundle": "lage bundle"
+    "bundle": "lage bundle",
+    "checkchange": "beachball check",
+    "release": "beachball publish",
+    "change": "beachball change"
   },
   "dependencies": {
+    "beachball": "^2.49.0",
+    "depcheck": "^1.4.7",
     "lage": "^2.11.12"
   },
   "packageManager": "yarn@4.2.2"
