fixing the publish

--- a/packages/ado-pat/package.json
+++ b/packages/ado-pat/package.json
@@ -43,6 +43,6 @@
     }
   },
   "repository": {
-    "url": "https://github.com/kenotron/ado-pat"
+    "url": "https://github.com/kenotron/devops-buddy"
   }
 }
