--- a/packages/ado-npm-connect/package.json
+++ b/packages/ado-npm-connect/package.json
@@ -35,5 +35,9 @@
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
-  }
+  },
+  "files": [
+    "dist/**",
+    "lib/**"
+  ]
 }
