--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,7 @@ jobs:
 
       - run: yarn
 
-      - run: yarn lage build bundle --concurrency 2 --verbose
+      - run: yarn lage build test lint bundle --concurrency 2 --verbose
 
       - name: Set git user
         run: |
